--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="container">
             <div class="brand">
-                <img src="IMG/logo.jpeg" alt="Logo Ornamentar" class="logo">
+                <img src="IMG/logo.png" alt="Logo Ornamentar" class="logo">
                 <h1>Ornamentar</h1>
             </div>
             <nav>
