--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
                 <img src="IMG/logo.png" alt="Logo Ornamentar" class="logo">
                 <h1>Ornamentar</h1>
             </div>
+            <div class="menu-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
             <nav>
                 <ul>
                     <li><a href="#servicos">Serviços</a></li>
@@ -25,7 +30,7 @@
                 </ul>
             </nav>
         </div>
-    </header>   <main>
+    </header>
         <section id="hero">
             <div class="container">
                 <h2>Transforme seu espaço com elegância</h2>
