--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <section id="sobre" class="section-light">
             <div class="container">
                 <h2>Sobre Nós</h2>
-                <p>Fundada por Emerson e Caroline, a Ornamentar nasceu do sonho de transformar ambientes com elegância e sofisticação. Combinamos arte e técnica para criar espaços únicos e acolhedores.</p>
+                <p>A Ornamentar nasceu do sonho de transformar ambientes com elegância e sofisticação. Combinamos arte e técnica para criar espaços únicos e acolhedores.</p>
                 <p>Nossa missão é oferecer produtos de alta qualidade e serviços personalizados, sempre com atenção aos detalhes e à satisfação do cliente.</p>
             </div>
         </section>
